tests/syntax/bad/testfile-comment-1.go
package main
/* les commentaires /* ne peuvent pas être */ imbriqués */
